client/src/components/navbar/navbar.css
.nav-contain {
    width: 100%;
    height: 10vh;
    box-shadow: 0 0 5px #333;
    display: flex;
    flex-direction: row;
    align-items: center;
    z-index: 5;
}

.logo {
    width: 10%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.menus {
    width: 50%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 30px;

}

.menus .menu-item {
    width: 100px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 5px;
    color: var(--color);
    background: var(--secondary-color);
    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
    cursor: pointer;
    font-size: 1rem;
    text-transform: capitalize;
    transition: 0.3s;
}

.menu-item:hover {
    transition: 0.3s;
    transform: scale(110%);
}

.other-details {
    position: relative;
    width: 30%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: space-around;
}

.other-details-item {
    cursor: pointer;
    font-size: 1rem;
    text-transform: capitalize;
    transition: 0.3s;
}

.other-details-item:hover {
    transform: scale(110%);
}

.other-details .dot {
    position: absolute;
    bottom: 10px;
    width: 10px;
    height: 10px;
    border-radius: 50%;
    transition: 0.9s;
    background: var(--color);
    opacity: 0;
}


.other-details .other-details-item:hover~.dot {
    transition: 0.5s;
    opacity: 1;
}

.other-details .other-details-item:nth-child(1):hover~.dot {
    transform: translateX(-195px);
}

.other-details .other-details-item:nth-child(2):hover~.dot {
    transform: translateX(-66px);
}

.other-details .other-details-item:nth-child(3):hover~.dot {
    transform: translateX(80px);
}

.other-details .other-details-item:nth-child(4):hover~.dot {
    transform: translateX(210px);
}


.account {
    width: 10%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}

.account svg {
    transition: 0.3s;
}

.account:hover svg {
    transition: 0.3s;
    transform: scale(120%);
    opacity: 0.5;
}

.acc-box {
    position: absolute;
    display: none;
    top: 60px;
    right: 10px;
    width: 140px;
    height: auto;
    border-radius: 15px;
    background: var(--color);
    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
    overflow: hidden;
}

.acc-box .acc-box-item {
    width: 100%;
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    text-transform: capitalize;
    border-bottom: 2px solid #333;
    transition: 0.3s;
    color: var(--primary-color);
}

.acc-box .acc-box-item:hover {
    transition: 0.3s;
    background: #333;
}



/*! Extra Small Devices (Portrait Phones) */
@media only screen and (max-width: 575px) {
    .menus {
        display: none;
    }

    .other-details {
        display: none;
    }
}

